--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "site",
+  "name": "",
   "version": "4.5.0",
   "description": "https://discord.gg/gointerstellar",
   "type": "module",
